fix spacing between multiple checkboxes together

--- a/components/Signup/assets/custom.scss
+++ b/components/Signup/assets/custom.scss
@@ -55,7 +55,7 @@ $slate-grey: #9195A5;
   font-weight: bold;
 }
 
-#signup-form .checkbox + .checkbox {
+#signup-form .no-margin-left .checkbox + .checkbox {
   margin-left: 0;
 }
 
